[gitfix] 깃 초기 환경설정 - .gitignore, .gitattribute 수정 - .editorconfig 추가

--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,55 @@
-
+# ==============================================================================
+# Unreal Engine - Generated Files (절대 커밋 금지)
+# ==============================================================================
 Binaries/
-Build/
-DerivedDataCache/
+*/Binaries/
 Intermediate/
+*/Intermediate/
+DerivedDataCache/
+*/DerivedDataCache/
 Saved/
+*/Saved/
 
+# ==============================================================================
+# IDE & Editor
+# ==============================================================================
+.idea/
+.vscode/
+.vs/
 *.sln
 *.suo
-*.xcodeproj
-*.xcworkspace
+*.opensdf
+*.sdf
 *.VC.db
-*.VC.VC.opendb
+*.vc.db
 
-*.log
-*.tmp
-
+# ==============================================================================
+# OS Generated Files
+# ==============================================================================
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
 .DS_Store
 
-.vscode/
-.idea/
+# ==============================================================================
+# Unreal Engine Specifics
+# ==============================================================================
+Build/Receipts/
+Build/Sleipnir/
+Build/Version.h
+Config/User*.ini
+Config/Local*.ini
 
-# Visual Studio cache
-.vs/
-*.ipch
+# ==============================================================================
+# Plugins
+# ==============================================================================
+Plugins/*/Binaries/
+Plugins/*/Intermediate/
+Plugins/*/Saved/
+
+# ==============================================================================
+# Crashes & Scraps
+# ==============================================================================
+*.dmp
+*.log
