[add] BaseCharacter 클래스 추가 - 베이스 캐릭터 클래스 추가함

--- a/PTW/PTW.uproject
+++ b/PTW/PTW.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "PTW",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		}
 	],
 	"Plugins": [
@@ -24,7 +27,7 @@
 		},
 		{
 			"Name": "OnlineSubsystemSteam",
-        		"Enabled": true
+			"Enabled": true
 		},
 		{
 			"Name": "AdvancedSessions",
