[update] DefaultEngine.ini

--- a/PTW/Config/DefaultEngine.ini
+++ b/PTW/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/_PTW/Maps/MainMenu.MainMenu
 EditorStartupMap=/Game/_PTW/Maps/MainMenu.MainMenu
+TransitionMap=/Game/Developers/wonjun/TransitionLevel.TransitionLevel
 
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=1
@@ -275,3 +276,4 @@ SteamDevAppId=480
 
 [/Script/OnlineSubsystemSteam.SteamNetDriver]
 NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
+
