[Add] : 발사 어빌리티, GC BP 추가,  ItemInstance 추가 [Update] : GC를 위한 GameplayTag 추가, Weapon Actor 부모 SceneComponent 추가, InventoryComponent Replicate 설정 추가, GC 클래스 네이밍 룰에 맞춰서 수정

--- a/PTW/Config/DefaultGameplayTags.ini
+++ b/PTW/Config/DefaultGameplayTags.ini
@@ -1,4 +1,5 @@
 ;METADATA=(Diff=true, UseCommands=true)
+
 [/Script/GameplayTags.GameplayTagsSettings]
 ImportTagsFromConfig=True
 WarnOnInvalidTags=True
@@ -10,6 +11,7 @@ bDynamicReplication=False
 InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
++GameplayTagList=(Tag="GameplayCue.Weapon.Fire",DevComment="")
 +GameplayTagList=(Tag="Input.Action.Crouch",DevComment="")
 +GameplayTagList=(Tag="Input.Action.Jump",DevComment="")
 +GameplayTagList=(Tag="Input.Action.Sprint",DevComment="")
