--- a/PTW/Config/DefaultGameplayTags.ini
+++ b/PTW/Config/DefaultGameplayTags.ini
@@ -19,4 +19,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="State.Movement.Sprinting",DevComment="")
 +GameplayTagList=(Tag="State.Posture.Crouching",DevComment="")
 +GameplayTagList=(Tag="State.Status.Dead",DevComment="")
++GameplayTagList=(Tag="Weapon.Gun.Pistol",DevComment="")
++GameplayTagList=(Tag="Weapon.Gun.Rifle",DevComment="")
++GameplayTagList=(Tag="Weapon.State.Equip",DevComment="")
 
