[update]  GameInstanceSystem에서 현재 라운드 저장 후 GameMode에서 받아서 GameState에 전달 [refactor] PTWGameState 변수 RemainTime, CurrentRound private로 옮기고 Getter, Setter 함수 생성

--- a/PTW/Config/DefaultEngine.ini
+++ b/PTW/Config/DefaultEngine.ini
@@ -4,6 +4,7 @@
 GameDefaultMap=/Game/_PTW/Maps/MainMenu.MainMenu
 EditorStartupMap=/Game/_PTW/Maps/MainMenu.MainMenu
 TransitionMap=/Game/Developers/wonjun/TransitionLevel.TransitionLevel
+ServerDefaultMap=/Engine/Maps/Entry.Entry
 
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=1
@@ -276,4 +277,8 @@ SteamDevAppId=480
 
 [/Script/OnlineSubsystemSteam.SteamNetDriver]
 NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
+
+
+[CoreRedirects]
++FunctionRedirects=(OldName="/Script/PTW.PTWGameMode.EndMiniGame",NewName="/Script/PTW.PTWGameMode.EndTimer")
 
