--- a/PTW/Config/DefaultEngine.ini
+++ b/PTW/Config/DefaultEngine.ini
@@ -4,6 +4,7 @@
 GameDefaultMap=/Game/_PTW/Maps/MainMenu.MainMenu
 EditorStartupMap=/Game/_PTW/Maps/MainMenu.MainMenu
 TransitionMap=/Game/Developers/wonjun/TransitionLevel.TransitionLevel
+GameInstanceClass=/Game/_PTW/BluePrints/CoreFramework/Game/GameInstance/BP_PTWGameInstance.BP_PTWGameInstance_C
 
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=1
