--- a/PTW/Config/DefaultGameplayTags.ini
+++ b/PTW/Config/DefaultGameplayTags.ini
@@ -22,4 +22,5 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Weapon.Gun.Pistol",DevComment="")
 +GameplayTagList=(Tag="Weapon.Gun.Rifle",DevComment="")
 +GameplayTagList=(Tag="Weapon.State.Equip",DevComment="")
++GameplayTagList=(Tag="Weapon.State.Reload",DevComment="")
 
