[gitfix] .gitignore Developers 파일 무시하도록 설정함

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,11 @@ Saved/
 */Saved/
 
 # ==============================================================================
+# User specific developer content
+# ==============================================================================
+Content/Developers/*
+
+# ==============================================================================
 # IDE & Editor
 # ==============================================================================
 .idea/
