--- a/PTW/PTW.uproject
+++ b/PTW/PTW.uproject
@@ -40,6 +40,10 @@
 		{
 			"Name": "AdvancedSteamSessions",
 			"Enabled": true
+		},
+		{
+			"Name": "SteamSockets",
+			"Enabled": true
 		}
 	]
 }
