--- a/PTW/Config/DefaultEngine.ini
+++ b/PTW/Config/DefaultEngine.ini
@@ -281,3 +281,4 @@ NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 
 [CoreRedirects]
 +ClassRedirects=(OldName="/Script/PTW.GA_Equip",NewName="/Script/PTW.PTWGA_Equip")
++FunctionRedirects=(OldName="/Script/PTW.PTWGameState.CurrentGamePhase",NewName="/Script/PTW.PTWGameState.OnRep_CurrentGamePhase")
