--- a/PTW/Config/DefaultEngine.ini
+++ b/PTW/Config/DefaultEngine.ini
@@ -5,6 +5,8 @@ GameDefaultMap=/Game/_PTW/Maps/MainMenu.MainMenu
 EditorStartupMap=/Game/_PTW/Maps/MainMenu.MainMenu
 TransitionMap=/Game/Developers/wonjun/TransitionLevel.TransitionLevel
 GameInstanceClass=/Game/_PTW/BluePrints/CoreFramework/Game/GameInstance/BP_PTWGameInstance.BP_PTWGameInstance_C
+GlobalDefaultGameMode=/Game/_PTW/BluePrints/CoreFramework/MainMenu/BP_PTWMainMenuGameMode.BP_PTWMainMenuGameMode_C
+GlobalDefaultServerGameMode=None
 
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=1
@@ -282,3 +284,4 @@ NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 [CoreRedirects]
 +ClassRedirects=(OldName="/Script/PTW.GA_Equip",NewName="/Script/PTW.PTWGA_Equip")
 +FunctionRedirects=(OldName="/Script/PTW.PTWGameState.CurrentGamePhase",NewName="/Script/PTW.PTWGameState.OnRep_CurrentGamePhase")
+
