[add] Transtion Map 생성 및 설정

--- a/PTW/Config/DefaultEngine.ini
+++ b/PTW/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/_PTW/Maps/MainMenu.MainMenu
 EditorStartupMap=/Game/_PTW/Maps/MainMenu.MainMenu
-TransitionMap=/Game/Developers/wonjun/TransitionLevel.TransitionLevel
+TransitionMap=/Game/_PTW/Maps/TransitionMap.TransitionMap
 GameInstanceClass=/Game/_PTW/BluePrints/CoreFramework/Game/GameInstance/BP_PTWGameInstance.BP_PTWGameInstance_C
 GlobalDefaultGameMode=/Game/_PTW/BluePrints/CoreFramework/MainMenu/BP_PTWMainMenuGameMode.BP_PTWMainMenuGameMode_C
 GlobalDefaultServerGameMode=None
