[Fix] : 총기 동기화 오류 수정 [Update] : 총알 탄장 0발 일 때 발사 제한 로직 추가

--- a/PTW/Config/DefaultEngine.ini
+++ b/PTW/Config/DefaultEngine.ini
@@ -284,4 +284,5 @@ NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 [CoreRedirects]
 +ClassRedirects=(OldName="/Script/PTW.GA_Equip",NewName="/Script/PTW.PTWGA_Equip")
 +FunctionRedirects=(OldName="/Script/PTW.PTWGameState.CurrentGamePhase",NewName="/Script/PTW.PTWGameState.OnRep_CurrentGamePhase")
++FunctionRedirects=(OldName="/Script/PTW.PTWInventoryComponent.ClientRPCSetCurrentWeapon",NewName="/Script/PTW.PTWInventoryComponent.ServerRPCSetCurrentWeapon")
 
