[Update] : WeaponAttributeSet 추가, Equip 시에 AttributeSet 적용 되도록 수정, 히트 판정 Server-side Validation 방식으로 설정,  재장전 시 CurrenAmmo를 GameplayEffect를 통해 MaxAmmo 값으로 변경되도록 수정 [Add] : 총알 감소 GE BP 추가, 재장전 GE BP 추가, Damage GE BP 추가, WeaponAttributeSet 클래스 추가

--- a/PTW/Config/DefaultEngine.ini
+++ b/PTW/Config/DefaultEngine.ini
@@ -286,4 +286,5 @@ NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 +FunctionRedirects=(OldName="/Script/PTW.PTWGameState.CurrentGamePhase",NewName="/Script/PTW.PTWGameState.OnRep_CurrentGamePhase")
 +FunctionRedirects=(OldName="/Script/PTW.PTWInventoryComponent.ClientRPCSetCurrentWeapon",NewName="/Script/PTW.PTWInventoryComponent.ServerRPCSetCurrentWeapon")
 +PropertyRedirects=(OldName="/Script/PTW.PTWItemInstance.SpawnedWeapon",NewName="/Script/PTW.PTWItemInstance.SpawnedWeapon1P")
++PropertyRedirects=(OldName="/Script/PTW.PTWWeaponAttributeSet.Health",NewName="/Script/PTW.PTWWeaponAttributeSet.MaxAmmo")
 
