[add] PTWMiniGameRule 생성 [update] PreGameLobby에서 Logout 후 남아 있는 인원이 게임 시작 최소 인원 미만일 경우 타이어 해제 [fix] LobbyGameMode PreGameLobby 상태일 때 타이머 실행 조건 변경 [fix] 기존 LobbyGameMode 변수 FGameFlowRule 구조체로 변경

--- a/PTW/Config/DefaultEngine.ini
+++ b/PTW/Config/DefaultEngine.ini
@@ -286,4 +286,7 @@ NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 +FunctionRedirects=(OldName="/Script/PTW.PTWGameState.CurrentGamePhase",NewName="/Script/PTW.PTWGameState.OnRep_CurrentGamePhase")
 +FunctionRedirects=(OldName="/Script/PTW.PTWInventoryComponent.ClientRPCSetCurrentWeapon",NewName="/Script/PTW.PTWInventoryComponent.ServerRPCSetCurrentWeapon")
 +PropertyRedirects=(OldName="/Script/PTW.PTWItemInstance.SpawnedWeapon",NewName="/Script/PTW.PTWItemInstance.SpawnedWeapon1P")
++StructRedirects=(OldName="/Script/PTW.PtwRoundRule",NewName="/Script/PTW.PTWRoundRule")
++StructRedirects=(OldName="/Script/PTW.PTWSpawnRespawnRule",NewName="/Script/PTW.PTWSpawnRule")
++PropertyRedirects=(OldName="/Script/PTW.PTWMiniGameRule.SpawnRespawnRule",NewName="/Script/PTW.PTWMiniGameRule.SpawnRule")
 
