--- a/PTW/Config/DefaultGameplayTags.ini
+++ b/PTW/Config/DefaultGameplayTags.ini
@@ -10,6 +10,7 @@ bDynamicReplication=False
 InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
++GameplayTagList=(Tag="Data.Damage",DevComment="")
 +GameplayTagList=(Tag="Event.Gimmick.Collect",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Weapon.Fire",DevComment="")
 +GameplayTagList=(Tag="Input.Action.Crouch",DevComment="")
