[Update] : WeaponAttributeSet에 FireRate변수 추가 및 적용 (GA_Fire에서 해당 값 만큼 연사속도 적용), GA_Fire에서 HitType을 통해 HitScan과 Projectile 방식의 발사 분기 추가, GameplayTag 추가(Weapon.Gun.Rocket) [Add] : 투사체 액터 클래스 및 BP 추가, WeaponActor 하위 클래스로 HitScan, Projectile 클래스 추가 및 기존 적용되었던 WeaponActor 부모 클래스 변경 (투사체 테스트를 위해서는 MiniGameMode의 SpawnDefaultWeapon 함수의 Tag를 Rocket으로 수정해야 테스트 가능)

--- a/PTW/Config/DefaultEngine.ini
+++ b/PTW/Config/DefaultEngine.ini
@@ -287,6 +287,7 @@ NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 +FunctionRedirects=(OldName="/Script/PTW.PTWInventoryComponent.ClientRPCSetCurrentWeapon",NewName="/Script/PTW.PTWInventoryComponent.ServerRPCSetCurrentWeapon")
 +PropertyRedirects=(OldName="/Script/PTW.PTWItemInstance.SpawnedWeapon",NewName="/Script/PTW.PTWItemInstance.SpawnedWeapon1P")
 +PropertyRedirects=(OldName="/Script/PTW.PTWWeaponAttributeSet.Health",NewName="/Script/PTW.PTWWeaponAttributeSet.MaxAmmo")
++PropertyRedirects=(OldName="/Script/PTW.PTWProjectile.SphereComponent",NewName="/Script/PTW.PTWProjectile.CapsuleComponent")
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
