--- a/PTW/Config/DefaultGameplayTags.ini
+++ b/PTW/Config/DefaultGameplayTags.ini
@@ -1,4 +1,5 @@
 ;METADATA=(Diff=true, UseCommands=true)
+
 [/Script/GameplayTags.GameplayTagsSettings]
 ImportTagsFromConfig=True
 WarnOnInvalidTags=True
@@ -26,6 +27,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Weapon.Anim.Fire",DevComment="")
 +GameplayTagList=(Tag="Weapon.Gun.Pistol",DevComment="")
 +GameplayTagList=(Tag="Weapon.Gun.Rifle",DevComment="")
++GameplayTagList=(Tag="Weapon.Gun.Rocket",DevComment="")
 +GameplayTagList=(Tag="Weapon.State.Equip",DevComment="")
 +GameplayTagList=(Tag="Weapon.State.Reload",DevComment="")
 +GameplayTagList=(Tag="Weapon.State.UnEquip",DevComment="")
