[Update] : HeadShot일 때  임시로 태그를 추가하는 코드 추가(State.HitReaction.HeadShot)

--- a/PTW/Config/DefaultGameplayTags.ini
+++ b/PTW/Config/DefaultGameplayTags.ini
@@ -20,6 +20,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Input.Action.Jump",DevComment="")
 +GameplayTagList=(Tag="Input.Action.Reload",DevComment="")
 +GameplayTagList=(Tag="Input.Action.Sprint",DevComment="")
++GameplayTagList=(Tag="State.HitReaction.HeadShot",DevComment="")
 +GameplayTagList=(Tag="State.Movement.InAir",DevComment="")
 +GameplayTagList=(Tag="State.Movement.Sprinting",DevComment="")
 +GameplayTagList=(Tag="State.Posture.Crouching",DevComment="")
