--- a/PTW/Config/DefaultGame.ini
+++ b/PTW/Config/DefaultGame.ini
@@ -53,7 +53,7 @@ InternationalizationPreset=English
 -CulturesToStage=en
 +CulturesToStage=en
 LocalizationTargetCatchAllChunkId=0
-bCookAll=False
+bCookAll=True
 bCookMapsOnly=False
 bTreatWarningsAsErrorsOnCook=False
 bSkipEditorContent=False
