--- a/PTW/Config/DefaultGameplayTags.ini
+++ b/PTW/Config/DefaultGameplayTags.ini
@@ -1,5 +1,4 @@
 ;METADATA=(Diff=true, UseCommands=true)
-
 [/Script/GameplayTags.GameplayTagsSettings]
 ImportTagsFromConfig=True
 WarnOnInvalidTags=True
@@ -14,6 +13,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Data.Damage",DevComment="")
 +GameplayTagList=(Tag="Event.Gimmick.Collect",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Weapon.Fire",DevComment="")
++GameplayTagList=(Tag="GameplayCue.Weapon.HitImpact",DevComment="")
 +GameplayTagList=(Tag="Input.Action.Crouch",DevComment="")
 +GameplayTagList=(Tag="Input.Action.Equip1",DevComment="")
 +GameplayTagList=(Tag="Input.Action.Fire",DevComment="")
