--- a/PTW/Config/DefaultGameplayTags.ini
+++ b/PTW/Config/DefaultGameplayTags.ini
@@ -1,4 +1,5 @@
 ;METADATA=(Diff=true, UseCommands=true)
+
 [/Script/GameplayTags.GameplayTagsSettings]
 ImportTagsFromConfig=True
 WarnOnInvalidTags=True
@@ -12,6 +13,7 @@ NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Data.Damage",DevComment="")
 +GameplayTagList=(Tag="Event.Gimmick.Collect",DevComment="")
++GameplayTagList=(Tag="GameplayCue.Weapon.Explosion",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Weapon.Fire",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Weapon.HitImpact",DevComment="")
 +GameplayTagList=(Tag="Input.Action.Crouch",DevComment="")
